force-app/main/default/objects/SVMXC__Sync_Request_Records__c/SVMXC__Sync_Request_Records__c.object-meta.xml
<CustomObject>
    <description>Record level information specific to the request made by mobile device during synchronization is stored in this object. The data in this object is removed once the request get completed.</description>
    <label>Sync Request Record</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Request Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>