force-app/main/default/objects/SVMXC__Sync_Request_Records__c/fields/SVMXC__Client_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Client_Record_Id__c</fullName>
    <label>Client Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>