force-app/main/default/objects/SVMXC__Sync_Request_Records__c/fields/SVMXC__Iteration_Index__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Iteration_Index__c</fullName>
    <label>Iteration Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>